--- a/SimchaFund.Web/Views/Home/Index.cshtml
+++ b/SimchaFund.Web/Views/Home/Index.cshtml
@@ -1,1 +1,70 @@
-﻿
+﻿@model SimchasViewModel
+
+<div class="container">
+    <main role="main" class="pb-3" style="margin-top: 60px;">
+
+        <div class="header">
+            <h1>Simchas</h1>
+        </div>
+        <div class="row header">
+            <div class="col-md-4">
+                <button class="btn btn btn-danger" id="new-simcha">New Simcha</button>
+            </div>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th>Contributions</th>
+                    <th>Simcha Name</th>
+                    <th>Contributor Count</th>
+                    <th>Total</th>
+                    <th>Date</th>
+                </tr>
+                @foreach (var simcha in Model.Simchas)
+                {
+                    <tr>
+                        <td>
+                            <a class="btn btn-primary" href="/contributions?simchaid=@simcha.Id">Contributions</a>
+                        </td>
+                        <td>@simcha.SimchaName</td>
+                        <td>@simcha.SimchaContributors / @Model.ContributorCount</td>
+                        <td>@simcha.Total.ToString("C")</td>
+                        <td>@simcha.Date.ToShortDateString()</td>
+                    </tr>
+                }
+            </table>
+        </div>
+        <div class="modal fade new-simcha" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">New Simcha</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="post" action="/home/new">
+                            <div class="form-group">
+                                <label>Simcha Name</label>
+                                <input class="form-control" name="simchaName" placeholder="Simcha Name" type="text">
+                            </div>
+                            <div class="form-group">
+                                <label>Date</label>
+                                <input type="date" name="date" class="form-control" id="datepicker">
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button class="btn btn-primary" name="commit">Save</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
+@section Scripts {
+
+    <script src="~/js/Simcha.js"></script>
+}
