--- a/SimchaFund.Web/Views/Home/Index.cshtml
+++ b/SimchaFund.Web/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                 {
                     <tr>
                         <td>
-                            <a class="btn btn-primary" href="/contributions?simchaid=@simcha.Id">Contributions</a>
+                            <a class="btn btn-primary" href="/Home/Contributions?simchaid=@simcha.Id">Contributions</a>
                         </td>
                         <td>@simcha.SimchaName</td>
                         <td>@simcha.SimchaContributors / @Model.ContributorCount</td>
