--- a/SimchaFund.Web/Views/Contributors/History.cshtml
+++ b/SimchaFund.Web/Views/Contributors/History.cshtml
@@ -1,1 +1,42 @@
-﻿<h1>History Page</h1>
+﻿@model HistoryViewModel
+
+<div class="container">
+    <main role="main" class="pb-3" style="margin-top: 60px;">
+
+        <div class="header">
+            <h1>History for @Model.Contributor.FirstName @Model.Contributor.LastName</h1>
+            <h3>Current Balance: @Model.Contributor.Balance.ToString("C")</h3>
+        </div>
+
+        <div class="row header">
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <tr>
+                        <th>Action</th>
+                        <th>Date</th>
+                        <th>Amount</th>
+                    </tr>
+                    @foreach (var simcha in Model.Simchas)
+                    {
+                        <tr>
+                            <td>
+                                Contribution for the @simcha.SimchaName
+                            </td>
+                            <td style="text-align: center; vertical-align: middle;">
+                                @simcha.Date.ToLongDateString()
+                            </td>
+                            <td style="text-align: center; vertical-align: middle;">
+                                @simcha.Total.ToString("C")
+                            </td>
+                        </tr>
+
+                    }
+                </table>
+            </div>
+        </div>
+
+        <div style="text-align:center;">
+            <a class="btn-lg btn-danger" href="/contributors">Back to Contributors</a>
+        </div>
+    </main>
+</div>
